--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             </div>
         </div>
         <audio id="myAudio" autoplay loop>
-            <source src="music.mp3" type="audio/mpeg">
+            <source src="/music.mp3" type="audio/mpeg">
         </audio>
     </div>
 
@@ -307,3 +307,4 @@
 
 </body>
 </html>
+
